--- a/public/partials/account_details.html
+++ b/public/partials/account_details.html
@@ -1,9 +1,9 @@
-Hello there
+Account
 <div >
   <ul class="unstyled">
-    <li class="ng-cloack" ng-repeat="accountCtrl.accounts">
-      {{account.displayName}} - 
-      <span ng-bind="account.profile.emails" />
+    <li >
+      <span ng-bind="accountCtrl.account.displayName" />
+      <span ng-bind="accountCtrl.account.emails" />
     </li>
   </ul>
   
