--- a/public/partials/account_list.html
+++ b/public/partials/account_list.html
@@ -1,6 +1,6 @@
 <div >
     
-  <md-toolbar class="md-info">
+  <md-toolbar class="md-primary md-hue-2">
     <div class="md-toolbar-tools">
       <h2 class="md-flex">Accounts</h2> 
         <md-button class="md-fab md-mini" aria-label="Add" ng-click="accountCtrl.go('/account/new/form')">
