--- a/public/partials/account_form.html
+++ b/public/partials/account_form.html
@@ -1,8 +1,9 @@
 <div >
 
-  <md-toolbar class="md-info">
+  <md-toolbar class="md-primary md-hue-2">
     <div class="md-toolbar-tools">
-      <h2 class="md-flex">{{accountCtrl.account.displayName}}</h2>
+      <h2 class="md-flex"><a href="#/">Accounts</a></h2> 
+        
     </div>
   </md-toolbar>
   
