--- a/public/partials/signin.html
+++ b/public/partials/signin.html
@@ -13,7 +13,7 @@
 
       <md-card-content>
         <md-button style="width:40%; background-color: #3b5998; color:#fff" ng-click="">Facebook</md-button>
-        <md-button style="width:40%; background-color: #DC4E41; color:#fff" ng-click="signinCtrl.redir('/auth/google?redir_url=public/admin.html')">Google+</md-button>
+        <md-button style="width:40%; background-color: #DC4E41; color:#fff" ng-click="signinCtrl.redir('/auth/google?redir_url=/public/admin.html')">Google+</md-button>
 	    </md-input-container>
 
       <md-card-content>
