--- a/public/partials/signin.html
+++ b/public/partials/signin.html
@@ -37,7 +37,7 @@
       </md-card-content>
       <div class="md-actions" layout="row" layout-align="center">
         <md-button ng-click="signinCtrl.signin()">Sign in</md-button>
-        <md-button ng-click="signinCtrl.go()">Sign up</md-button>
+        <md-button ng-click="signinCtrl.redir('/public/main.html#/signup')">Sign up</md-button>
       </div>
     </md-card>
     
